:bug: fix landing section2 z-index over menu.

--- a/frontend/src/assets/scss/landing/section2.scss
+++ b/frontend/src/assets/scss/landing/section2.scss
@@ -1,6 +1,6 @@
 .section2 {
-  z-index: 30;
   box-shadow: 0 2px 2px 0 $dark2 !important;
+  z-index: 5;
   position: relative;
   .category-container {
     padding: 25px 0;
